log

Wed 13 Mar 2024 08:41:01 PM UTC: 
 exercises.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
 tests:  0|7
total_score: 0/70
a2e6a06
Wed 13 Mar 2024 08:42:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
7e62564
Wed 13 Mar 2024 08:44:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:28:27: error: expected expression before ‘]’ token
   28 |   int arrOriginal[] = arr[];
      |                           ^
exercises.c:28:7: error: unused variable ‘arrOriginal’ [-Werror=unused-variable]
   28 |   int arrOriginal[] = arr[];
      |       ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
44fe088
Wed 13 Mar 2024 08:51:31 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:14: error: assignment to expression with array type
   42 |       parArr = arr[i];
      |              ^
exercises.c:47:10: error: function returns address of local variable [-Werror=return-local-addr]
   47 |   return parArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e6e402c
Wed 13 Mar 2024 08:52:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:7: error: called object ‘parArr’ is not a function or function pointer
   42 |       parArr(*newSize) = arr[i];
      |       ^~~~~~
exercises.c:38:7: note: declared here
   38 |   int parArr[*newSize];
      |       ^~~~~~
exercises.c:47:10: error: function returns address of local variable [-Werror=return-local-addr]
   47 |   return parArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
d4b9095
Wed 13 Mar 2024 08:53:56 PM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:40:7: error: called object ‘parArr’ is not a function or function pointer
   40 |       parArr(*newSize) = arr[i];
      |       ^~~~~~
exercises.c:36:7: note: declared here
   36 |   int parArr[*newSize];
      |       ^~~~~~
exercises.c:45:17: error: expected expression before ‘]’ token
   45 |   return parArr[];
      |                 ^
exercises.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c696836
Wed 13 Mar 2024 08:54:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:45:17: error: expected expression before ‘]’ token
   45 |   return parArr[];
      |                 ^
exercises.c:36:7: error: variable ‘parArr’ set but not used [-Werror=unused-but-set-variable]
   36 |   int parArr[*newSize];
      |       ^~~~~~
exercises.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c89d98f
Wed 13 Mar 2024 08:55:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:45:16: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   45 |   return parArr[*newSize];
      |          ~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fee9de6
Wed 13 Mar 2024 08:55:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:45:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   45 |   return *parArr;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
66a65e4
Wed 13 Mar 2024 08:56:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:45:10: error: function returns address of local variable [-Werror=return-local-addr]
   45 |   return parArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
1aa099e
